[gd_scene load_steps=5 format=3 uid="uid://b43w80klpbdo6"]

[ext_resource type="PackedScene" uid="uid://d0eivog06w651" path="res://scenes/UI/Dialog.tscn" id="1_d77uu"]
[ext_resource type="PackedScene" uid="uid://d0tjurbwslrgx" path="res://scenes/UI/LevelButton.tscn" id="2_e2qm2"]
[ext_resource type="Script" uid="uid://bp1dlkw6qb43d" path="res://scenes/UI/levels.gd" id="2_qidnb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pljj"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="Levels" instance=ExtResource("1_d77uu")]
script = ExtResource("2_qidnb")

[node name="FileDialog" type="FileDialog" parent="." index="0"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")
use_native_dialog = true

[node name="PanelContainer" parent="." index="2"]
offset_left = -424.0
offset_right = 424.0

[node name="Reload" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/PanelContainer/Buttons" index="1"]
layout_mode = 2
text = "Reload"

[node name="Add" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/PanelContainer/Buttons" index="2"]
layout_mode = 2
text = "Add circuit"

[node name="Title" parent="PanelContainer/CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer" index="0"]
visible = false
text = "Level Select"

[node name="ScrollContainer" parent="PanelContainer/CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer" index="1"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_5pljj")

[node name="Levels" type="GridContainer" parent="PanelContainer/CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/ScrollContainer/Content" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 6

[node name="DEFAULT" parent="PanelContainer/CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/ScrollContainer/Content/Levels" index="0" instance=ExtResource("2_e2qm2")]
unique_name_in_owner = true
layout_mode = 2
text = "MIN SPACE
Built-in"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/PanelContainer/Buttons/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/PanelContainer/Buttons/Add" to="." method="_on_add_pressed"]
